--- a/styles/style.css
+++ b/styles/style.css
@@ -172,7 +172,7 @@ button{
     ),url(../img/Imghero-picture.jpg);
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 1600px ;
      
 } 
 
@@ -486,6 +486,7 @@ color: var(--hover-color);
 .btn:hover{
     background-color: var(--hover-color);
     color: var(--second-font-color);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .btn:focus{
@@ -499,6 +500,12 @@ color: var(--hover-color);
     gap:30px;
 
 }
+.goods-list-item:hover,
+.goods-list-item:focus{
+    border: 1px solid #EEEEEE;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
 .team-text-container{
     padding: 30px 0;
 }
