--- a/styles/style.css
+++ b/styles/style.css
@@ -61,6 +61,7 @@ button{
 .header{
     display: flex;
     align-items: center;
+    
 }
 
 .container{
@@ -486,6 +487,8 @@ color: var(--hover-color);
 .btn:focus{
     background-color: var(--hover-color);
     color: var(--second-font-color);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+
 }
 
 .goods-list{
@@ -499,7 +502,6 @@ color: var(--hover-color);
 }
 .goods-link:hover,
 .goods-link:focus{
-    border: 1px solid #EEEEEE;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
@@ -550,12 +552,9 @@ color: var(--hover-color);
     align-items: baseline;
 }
 .footer-right-title{
-    font-family: 'Roboto';
-    font-style: normal;
     font-weight: 700;
     font-size: 14px;
-    line-height: 16px;
-    letter-spacing: 0.03em;
+    line-height: 1.14;
     text-transform: uppercase;
     color: var(--second-font-color);
 
